# game-programming-cpp

./: .gitignore  CMakeLists.txt  conanfile.txt  gen_xcode.sh  main.cpp
.zed/: settings.json  tasks.json
Game/: CMakeLists.txt
Game/include/Game/: Game.h
Game/src/: Game.cpp
libs/: CMakeLists.txt
libs/Game/: CMakeLists.txt
libs/Game/include/Game/: Game.h  GameObject.h
libs/Game/src/: Game.cpp  GameObject.cpp  Wall.cpp  Wall.h
libs/Math/: CMakeLists.txt
libs/Math/include/Math/: Rect.h  Vec2.h
libs/Math/src/: Rect.cpp  Vec2.cpp
src/: Actor.cpp  Actor.h  Component.cpp  Component.h  Game.cpp  Game.h  Main.cpp  SpriteComponent.cpp  SpriteComponent.h  Vector2.cpp  Vector2.h  main.cpp
